--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "logdna-cloudwatch",
-  "version": "2.2.1",
-  "description": "Lambda Functions to Stream Logs from AWS CloudWatch to LogDNA",
+  "version": "2.3.0",
+  "description": "Lambda Functions to Stream Logs from AWS Cloud Watch and CloudTrail to LogDNA",
   "main": "index.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint -c .eslintrc index.js",
     "test": "tap"
   },
   "dependencies": {
-    "agentkeepalive": "^4.0.2",
-    "async": "^2.6.2",
-    "request": "^2.88.0"
+    "agentkeepalive": "^4.2.0",
+    "async": "^2.6.3",
+    "aws-sdk": "^2.1060.0",
+    "request": "^2.88.2",
+    "util": "^0.12.4",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
@@ -20,7 +23,8 @@
     "lambda",
     "logdna",
     "aws",
-    "cloudwatch"
+    "cloudwatch",
+    "cloudtrail"
   ],
   "repository": {
     "type": "git",
